# address-quality-service-api

./: .gitignore  Makefile  README.md  manifest_template.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: continuous-integration.yml
azure/: azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
azure/templates/: run-tests.yml
proxies/live/apiproxy/: proxy.xml
proxies/live/apiproxy/policies/: Add-API-Token.xml  FlowCallout.ApplyRateLimiting.xml  FlowCallout.GetEnvironmentKeyValueMapData.xml  OAuthV2.VerifyAccessTokenAppLevel3OrCis2Aal3.xml  Quota.xml  ServiceCallout.CallHealthcheckEndpoint.xml  SpikeArrest.xml  Verify-API-Key.xml  VerifyApiKey-Header.xml
proxies/live/apiproxy/proxies/: default.xml  generalEndpoint.xml
proxies/live/apiproxy/resources/jsc/: WritePathToVariable.js
proxies/live/apiproxy/targets/: target-general-endpoint.xml  target-spine-endpoint.xml  target.xml
proxies/sandbox/apiproxy/: proxy.xml
proxies/sandbox/apiproxy/proxies/: default.xml
sandbox/: app.js  app.spec.js  package-lock.json  package.json
specification/: address-quality-service-api.yaml
specification/components/examples/: postMatchAddressRequest.json  postMatchAddressResponse.json
specification/components/schemas/: postMatchAddress.yaml
tests/: test_endpoints.py
