[project]
name = "address-quality-service-api"
python = "^3.13"


[tool.poetry]
name = "address-quality-service-api"
version = "0.0.1-alpha"
description = "TODO"
authors = [
    #TODO add authors
]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/address-quality-service-api"
homepage = "https://digital.nhs.uk/developer/api-catalogue"
keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords
package-mode = false


[tool.poetry.dependencies]
python = "^3.13"
pytest-nhsd-apim = "^6.0.7"

[tool.poetry.dev-dependencies]
flake8 = "^7.0"
black = "^26.3"
pip-licenses = "^4.0"
jinja2 = "^3.1"
pyyaml = "^6.0"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.13"
gitpython = "^3.1.45"
pytest = "^8.0"
coverage = "^7.0"
aiohttp = "^3.10"
pytest-asyncio = "^0.23"

[tool.poetry.scripts]
